[package]
name = "binary_heap"
version = "0.1.0"
authors = ["Ashish Anand <ashishmax31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.11.0" }

[dev-dependencies]
rand = "0.8.3"
